[package]
name = "rust-book"
version = "0.0.1"
authors = ["Steve Klabnik <steve@steveklabnik.com>"]
description = "The Rust Book"

[[bin]]
name = "concat_chapters"
path = "tools/src/bin/concat_chapters.rs"

[[bin]]
name = "lfp"
path = "tools/src/bin/lfp.rs"

[[bin]]
name = "link2print"
path = "tools/src/bin/link2print.rs"

[[bin]]
name = "remove_links"
path = "tools/src/bin/remove_links.rs"

[[bin]]
name = "remove_markup"
path = "tools/src/bin/remove_markup.rs"

[[bin]]
name = "convert_quotes"
path = "tools/src/bin/convert_quotes.rs"

[dependencies]
walkdir = "0.1.5"
docopt = "0.6.82"
rustc-serialize = "0.3.19"
clap = "2.24"
chrono = "0.4"
handlebars = "0.32"
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.11"
serde_json = "1.0"
pulldown-cmark = "0.1.2"
lazy_static = "1.0"
log = "0.4"
env_logger = "0.5.0-rc.1"
toml = "0.4"
memchr = "2.0"
open = "1.1"
regex = "1.0.0"
tempfile = "3.0"
itertools = "0.7"
shlex = "0.1"
toml-query = "0.6"



# Search feature
elasticlunr-rs = { version = "2.2", optional = true, default-features = false }
ammonia = { version = "1.1", optional = true }

[features]
default = ["output", "watch", "serve", "search"]
debug = []
output = []
regenerate-css = []
watch = ["notify", "time", "crossbeam"]
serve = ["iron", "staticfile", "ws"]
search = ["elasticlunr-rs", "ammonia"]